--- a/smart_tgv.html
+++ b/smart_tgv.html
@@ -82,7 +82,7 @@
                                     <div class="spacer-double sm-hide"></div>
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
-                                    <h1 class="big">Основы ИНС для задач управления и прогнозирования</h1>
+                                    <h1 class="big">Теплогазоснабжение и вентиляция</h1>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
@@ -104,7 +104,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                         	<p class="lead wow fadeInUp">
-                                <h4>Программа повышения квалификации нацелена на формирование понимания принципов работы с данными и создания искусственных нейронных сетей, применяемых для решения задач прогнозирования и управления</h4>
+                                <h4>Формирование у слушателей профессиональных компетенций, необходимых для профессиональной деятельности в области тепло-, газоснабжения и обеспечения микроклимата жилых, общественных и производственных зданий</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div>
@@ -117,24 +117,17 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>В рамках курса повышения квалификации вы научитесь: 
+                                <h4>
+                                    Программа является преемственной к основной образовательной программе высшего образования направления подготовки 08.03.01 – Строительство, профиль «Теплогазоснабжение и вентиляция», квалификация (степень) – бакалавр.
+                                    <br>Область профессиональной деятельности слушателя включает:
                                     <ul>
-                                        <li>Писать на языке Python</li>
-                                        <li>Формировать базы данных и работать в SQL</li>
-                                        <li>Обрабатывать данные</li>
-                                        <li>Строить модели машинного обучения</li>
-                                        <li>Визуализировать данные</li>
-                                        <li>Решать задачи с помощью нейронных сетей</li>
-                                    </ul> 
-                                    <br><br>
-                                    Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
+                                        <li>проектирование, возведение, эксплуатация, мониторинг, оценка и реконструкция зданий и сооружений</li>
+                                        <li>инженерное обеспечение и оборудование строительных объектов и городских территорий, а также транспортной инфраструктуры</li>
+                                        <li>применение машин, оборудования и технологий для строительства и производства строительных материалов, изделий и конструкций</li>
+                                        <li>предпринимательскую деятельность и управление производственной деятельностью в строительной и жилищно-коммунальной сфере, включая обеспечение и оценку экономической эффективности предпринимательской и производственной деятельности</li>
+                                        <li>техническую и экологическую безопасность в строительной и жилищно-коммунальной сфере</li>
                                     </ul>
-                                    <br><br>
-                                    В качестве основного программного обеспечения будет использоваться PyCharm (Edu). 
+
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
@@ -148,7 +141,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Очная, очно-заочная с применением электронного обучения, дистанционных образовательных технологий</h4>
+                                <h4>Очно-заочная с применением электронного обучения, дистанционных образовательных технологий</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -161,7 +154,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс разработан для тех кто планирует  развиваться в сфере работы с данными и создания искусственных нейронных сетей</h4>
+                                <h4>Для лиц, занимающихся профессиональной деятельностью в области строительства</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -174,13 +167,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
-                                    </ul>
-                                </h4>
+                                <h4>В результате освоения программы слушатель сможет заниматься проектной деятельностью и эксплуатацией систем обеспечения микроклимата, газо- и теплоснабжения</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -193,7 +180,11 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4></h4>
+                                <h4>
+                                    Хворенков Д.А., к.т.н., доцент, Кафедра «Теплоэнергетика» 
+                                    <br>
+                                    Фахразиев И.И., заведующий учебной лабораторией кафедры "Теплоэнергетика"
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
