--- a/it_mob.html
+++ b/it_mob.html
@@ -57,7 +57,7 @@
                         <!-- mainmenu begin -->
                         <nav>
                             <ul id="mainmenu">
-                                <li><a class="active" href="index.html">Вернуться к станции</a></li> 
+                                <li><a href="index.html">Вернуться к станции</a></li> 
                             </ul>
                         </nav>
 
