--- a/smart_asutp.html
+++ b/smart_asutp.html
@@ -82,7 +82,7 @@
                                     <div class="spacer-double sm-hide"></div>
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
-                                    <h1 class="big">Основы ИНС для задач управления и прогнозирования</h1>
+                                    <h1 class="big">Автоматизированные системы управления технологическими процессами в теплоэнергетике</h1>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
@@ -104,7 +104,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                         	<p class="lead wow fadeInUp">
-                                <h4>Программа повышения квалификации нацелена на формирование понимания принципов работы с данными и создания искусственных нейронных сетей, применяемых для решения задач прогнозирования и управления</h4>
+                                <h4>Формирование у слушателей профессиональных компетенций, необходимых для профессиональной деятельности в области автоматизации технологических процессов и производств в теплоэнергетических системах</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div>
@@ -117,24 +117,13 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>В рамках курса повышения квалификации вы научитесь: 
+                                <h4>Область профессиональной деятельности слушателя, прошедшего обучение по программе профессиональной переподготовки, включает:
                                     <ul>
-                                        <li>Писать на языке Python</li>
-                                        <li>Формировать базы данных и работать в SQL</li>
-                                        <li>Обрабатывать данные</li>
-                                        <li>Строить модели машинного обучения</li>
-                                        <li>Визуализировать данные</li>
-                                        <li>Решать задачи с помощью нейронных сетей</li>
-                                    </ul> 
-                                    <br><br>
-                                    Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
+                                        <li>совокупность средств, способов и методов человеческой деятельности, направленных на автоматизацию действующих и создание новых автоматизированных и автоматических технологий и производств в теплоэнергетике</li>
+                                        <li>разработку средств и систем автоматизации  и управления технологическими процессами в теплоэнергетике</li>
+                                        <li>создание и применение алгоритмического, аппаратного и программного обеспечения систем автоматизации и управления технологическими процессами в теплоэнергетике</li>
+                                        <li>обеспечение эффективного функционирования средств и систем автоматизации и управления при соблюдении правил эксплуатации и безопасности</li>
                                     </ul>
-                                    <br><br>
-                                    В качестве основного программного обеспечения будет использоваться PyCharm (Edu). 
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
@@ -148,7 +137,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Очная, очно-заочная с применением электронного обучения, дистанционных образовательных технологий</h4>
+                                <h4>Очная с применением электронного обучения, дистанционных образовательных технологий</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -161,7 +150,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс разработан для тех кто планирует  развиваться в сфере работы с данными и создания искусственных нейронных сетей</h4>
+                                <h4>Для лиц, занимающихся использованием, эксплуатацией и проектированием систем автоматизированного управления теплоэнергетическими объектами, входящих в системы энергообеспечения населенных пунктов и предприятий</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -174,13 +163,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
-                                    </ul>
-                                </h4>
+                                <h4>В результате освоения программы слушатель получит компетенции, необходимые для пользования, эксплуатации и проектирования автоматизированных систем управления технологическими процессами на теплоэнергетических объектах и производствах</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -193,7 +176,10 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4></h4>
+                                <h4>Хворенков Д.А., к.т.н., доцент, Кафедра «Теплоэнергетика» 
+                                    <br>
+                                    Фахразиев И.И., заведующий учебной лабораторией кафедры "Теплоэнергетика"
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
