--- a/smart_pte.html
+++ b/smart_pte.html
@@ -82,7 +82,7 @@
                                     <div class="spacer-double sm-hide"></div>
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
-                                    <h1 class="big">Основы ИНС для задач управления и прогнозирования</h1>
+                                    <h1 class="big">Промышленная теплоэнергетика</h1>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
@@ -104,7 +104,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                         	<p class="lead wow fadeInUp">
-                                <h4>Программа повышения квалификации нацелена на формирование понимания принципов работы с данными и создания искусственных нейронных сетей, применяемых для решения задач прогнозирования и управления</h4>
+                                <h4>Формирование у слушателей профессиональных компетенций, необходимых для профессиональной деятельности в области теплоэнергетики и теплотехники</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div>
@@ -117,24 +117,14 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>В рамках курса повышения квалификации вы научитесь: 
+                                <h4>Программа является преемственной к основной образовательной программе высшего образования направления подготовки  13.03.01 - Теплоэнергетика и теплотехника, профиль «Промышленная теплоэнергетика», квалификация (степень) – бакалавр.
+                                    <br>
+                                    Область профессиональной деятельности слушателя, прошедшего обучение по программе, включает:
                                     <ul>
-                                        <li>Писать на языке Python</li>
-                                        <li>Формировать базы данных и работать в SQL</li>
-                                        <li>Обрабатывать данные</li>
-                                        <li>Строить модели машинного обучения</li>
-                                        <li>Визуализировать данные</li>
-                                        <li>Решать задачи с помощью нейронных сетей</li>
-                                    </ul> 
-                                    <br><br>
-                                    Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
+                                        <li>исследование, проектирование, конструирование и эксплуатацию технических средств по производству теплоты, её применению, управлению ее потоками и преобразованию иных видов энергии в теплоту</li>
+                                        <li>совокупность технических средств, способов и методов человеческой деятельности для производства, передачи, распределения, преобразования, применения тепловой энергии, управления потоками энергии</li>
                                     </ul>
-                                    <br><br>
-                                    В качестве основного программного обеспечения будет использоваться PyCharm (Edu). 
+ 
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
@@ -161,7 +151,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс разработан для тех кто планирует  развиваться в сфере работы с данными и создания искусственных нейронных сетей</h4>
+                                <h4>Для лиц, занимающихся профессиональной деятельностью в области промышленной теплоэнергетики, теплотехники и строительства</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -174,12 +164,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
-                                    </ul>
+                                <h4>В результате освоения программы слушатель сможет заниматься проектной деятельностью и эксплуатацией систем производства, передачи и использования тепловой энергии, систем газоснабжения и иных энергоносителей на промышленных и жилищно-коммунальных объектах
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
@@ -193,7 +178,11 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4></h4>
+                                <h4>
+                                    Хворенков Д.А., к.т.н., доцент, Кафедра «Теплоэнергетика» 
+                                    <br>
+                                    Фахразиев И.И., заведующий учебной лабораторией кафедры "Теплоэнергетика"
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
