--- a/soft_engit.html
+++ b/soft_engit.html
@@ -43,7 +43,7 @@
                     <div class="col-md-12">
                         <!-- logo begin -->
                         <div id="logo">
-                            <a href="index.html">
+                            <a href="index.html#section-schedules">
                                 <img class="mt5 logo" src="images/logo-light.png" alt="" width="60px">
                                 <img class="mt5 logo-2" src="images/logo-dark.png" alt="" width="60px">
                             </a>
@@ -57,7 +57,7 @@
                         <!-- mainmenu begin -->
                         <nav>
                             <ul id="mainmenu">
-                                <li><a class="active" href="index.html">Вернуться к станции</a></li> 
+                                <li><a href="index.html#section-schedules">Вернуться к станции</a></li> 
                             </ul>
                         </nav>
 
