--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
     <meta property="og:title" content="Ярмарка компетенций будущего" />
-    <meta property="og:url" content="http://distant.istu.ru/conf/" />
+    <meta property="og:url" content="http://distant.istu.ru/comp/" />
     <meta property="og:type" content="website" />
     <meta property="og:site_name" content="Ярмарка компетенций будущего" />
     <meta property="og:image" content="images/background/bg_source.png" />
@@ -94,7 +94,7 @@
                                     <div class="spacer-single"></div>
                                     <div class="spacer-single"></div>
                                     <div class="clearfix"></div>
-                                    <a href="#" class="btn-custom scroll-to" target="_blank">Регистрация</a>
+                                    <a href="https://forms.gle/y9d29aP2oUGhVFay9" class="btn-custom scroll-to" target="_blank">Регистрация</a>
                             </div>
                         </div>
                     </div>
@@ -609,6 +609,20 @@
                                                             <div class="clearfix"></div>                                               
                                                          </div>
                                                     </div>
+                                                    
+
+                                                    <div class="panel schedule-listing">
+                                                         <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/perminova.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-info">
+                                                            <h4><span>Перминова Ольга Михайловна</span><br>к.э.н., доцент, заведующий кафедрой «Менеджмент»</h4>
+                                                            </div>                                                               
+                                                            <div class="sc-time">
+                                                            <h4>Руководитель станции</h4>
+                                                            </div>        
+                                                            <div class="clearfix"></div>                                               
+                                                         </div> 
+                                                    </div>
                                                     <div class="panel schedule-listing">
                                                         <div class="schedule-item" href="soft_bu.html">
                                                             <div class="sc-name">
@@ -671,19 +685,6 @@
                                                             </div>
                                                             <div class="clearfix"></div>
                                                         </div>
-                                                    </div>
-
-                                                    <div class="panel schedule-listing">
-                                                         <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/perminova.jpg" class="img-circle" alt=""></div>
-                                                            <div class="sc-info">
-                                                            <h4><span>Перминова Ольга Михайловна</span><br>к.э.н., доцент, заведующий кафедрой «Менеджмент»</h4>
-                                                            </div>                                                               
-                                                            <div class="sc-time">
-                                                            <h4>Руководитель станции</h4>
-                                                            </div>        
-                                                            <div class="clearfix"></div>                                               
-                                                         </div> 
                                                     </div>
 
                                                 
@@ -1075,7 +1076,7 @@
                                 <div class="spacer-single"></div>
                                 <div class="spacer-single"></div>
                                 <div class="clearfix"></div>
-                                <a href="https://leader-id.ru/events/188334" class="btn-custom scroll-to" target="_blank">Участвовать</a>
+                                <a href="https://forms.gle/y9d29aP2oUGhVFay9" class="btn-custom scroll-to" target="_blank">Участвовать</a>
                             </div>
                         </div>                      
 
