--- a/cif_smm.html
+++ b/cif_smm.html
@@ -82,7 +82,8 @@
                                     <div class="spacer-double sm-hide"></div>
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
-                                    <h1 class="big">Основы социального проектирования</h1>
+                                    <h1 class="big">SMM - менеджмент</h1>
+                                    <h3>(количество часов 72)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
@@ -104,7 +105,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                         	<p class="lead wow fadeInUp">
-                                <h4>Формирование компетенций в области  создания и представления социального проекта</h4>
+                                <h4>Освоить компетенции одной  из самых  востребованных digital-специальностей и сформировать навыки  продвижения личного бренда и бизнеса в социальных сетях</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div>
@@ -117,24 +118,14 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>За время прохождения программы вы познакомитесь с тем:
+                                <h4>В программе изучается:
                                     <ul>
-                                        <li>Что такое проект, социальный проект  и социальное  проектирование</li>
-                                        <li>Как появляются идеи молодежных проектов</li>
-                                        <li>С чего начать? От идеи к реализации проекта</li>
-                                        <li>Как выявлять и исследовать социальную проблему</li>
-                                        <li>Как упаковать идею. Дизайн-мышление</li>
-                                        <li>Как сформировать команду проекта. Роли в  проектной команде. 7 шагов к созданию успешной команды</li>
-                                        <li>Как сформулировать  цели и задачи проекта</li>
-                                        <li>Основные методы, количественные и качественные показатели проекта</li>
-                                        <li>Кто такие партнеры проекта, что представляет собой собственный вклад и информационное сопровождение проекта</li>
-                                        <li>Что такое календарный план и смета проекта и как их составлять</li>
-                                        <li>Что такое очная защита на форумах.  Эффективное представление проекта</li>
-                                        <li>Как  грамотно реализовать  проект</li>
-                                        <li>Как правильно оформить проектную заявку на грантовый конкурс</li>
-                                        <li>Как составить отчета по реализации проекта</li>
-                                    </ul> <br><br>
-                                Участники на собственном примере проработают проектную идею, упакуют ее в проект и оформят проектную заявку на грантовый конкурс, а так же научатся правильно презентовать свой проект</h4>
+                                        <li>Аналитика и креатив социальных сетей</li>
+                                        <li>Работа с целевой аудиторией и инструментами продвижения</li>
+                                        <li>Создание контента для социальных сетей и разработка контент-стратегий</li>
+                                        <li>Создание комьюнити сообщества</li>
+                                    </ul>
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -147,7 +138,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Очная, очно-заочная с применением электронного обучения, дистанционных образовательных технологий</h4>
+                                <h4>Очно-заочная с применением электронного обучения, дистанционных образовательных технологий</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -160,7 +151,13 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс «Основы социального проектирования» разработан для тех, кто планирует принять участие в грантовых конкурсах, молодежных форумах с целью получить финансирование на реализацию проектных идей</h4>
+                                <h4>Учебный курс «SMM – менеджмент» разработан для тех, кто:
+                                    <ul>
+                                        <li>Хочет продвигать свой личный бренд в соцсетях</li>
+                                        <li>Хочет продвигать бизнес в соцсетях</li>
+                                        <li>Хочет попробовать свои силы как SMM – менеджмер на фрилансе</li>
+                                    </ul>
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -173,7 +170,13 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Знание основ социального проектирования поможет в оформлении проектной идеи и ее презентации на публике. В отличие от  аналогичных программ, предложенных вам на других площадках, данная программа сопровождается наличием практических занятий и консультаций с преподавателем в очном формате, что способствует более качественному усвоению теоретического материала и подробной  проработки собственного проекта. А навыки оформления и презентации проекта  помогут вам уверенно представить проект на конкурсах и форумах.</h4>
+                                <h4>Мы дадим вам инструмент, благодаря которому Вы:
+                                    <ul>
+                                        <li>Научитесь строить он-лайн  сообщество и продвигать личный бренд и свой бизнес</li>
+                                        <li>Научитесь создавать вовлекающий контент  и выбирать эффективные  каналы продвижения для вашей целевой аудитории</li>
+                                        <li>Научитесь разрабатывать контант-стратегии</li>
+                                    </ul>
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -186,7 +189,10 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Устинова Н.П. , к. пед. наук , доцент кафедры «ИГППиТР»</h4>
+                                <h4>К.э.н., доцент Перминова О.М. <br>
+                                    к.э.н., доцент Груздева Т.В. <br>
+                                ст. преподаватель Камалетдинов Д.С.
+                            </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
