--- a/smart_zashita.html
+++ b/smart_zashita.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Инженерная защита окружающей среды</h1>
+                                    <h3>(количество часов 360)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
