--- a/soft_engvia.html
+++ b/soft_engvia.html
@@ -85,6 +85,7 @@
                                     <h1 class="big">
                                         Английский язык для научно-исследовательской деятельности «Via Scientiarum»
                                     </h1>
+                                    <h3>(количество часов 72)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
