--- a/smart_ins.html
+++ b/smart_ins.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Основы ИНС для задач управления и прогнозирования</h1>
+                                    <h3>(количество часов 104)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
