--- a/soft_orator.html
+++ b/soft_orator.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Ораторское искусство и умение вести переговоры</h1>
+                                    <h3>(количество часов 72)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
