--- a/soft_profkom.html
+++ b/soft_profkom.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Переводчик в сфере профессиональной коммуникации</h1>
+                                    <h3>(количество часов 1500)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
