--- a/smart_bim.html
+++ b/smart_bim.html
@@ -82,9 +82,9 @@
                                     <div class="spacer-double sm-hide"></div>
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
-                                    <h1 class="big">Основы искусственной нейронной сети для задач управления и прогнозирования</h1>
+                                    <h1 class="big">Теория и практика применения технологий информационного моделирования зданий и сооружений</h1>
                                     <div class="spacer-single"></div>
-                                    <h3>(количество часов 104)</h3>
+                                    <h3>(количество часов 72)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
                             </div>
@@ -106,7 +106,12 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                         	<p class="lead wow fadeInUp">
-                                <h4>Программа повышения квалификации нацелена на формирование понимания принципов работы с данными и создания искусственных нейронных сетей, применяемых для решения задач прогнозирования и управления</h4>
+                                <h4>Качественное изменение профессиональных компетенций, необходимых для выполнения следующих видов профессиональной деятельности в рамках имеющейся квалификации:
+                                    <ul>
+                                        <li>проектировать здания и сооружения нового строительства с использованием ТИМ (технологий информационного моделирования)</li>
+                                        <li>создавать трёхмерную информационную модель здания для последующего устранения пересечений в проекте и автоматизации процесса проектирования</li>
+                                    </ul>
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div>
@@ -119,25 +124,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>В рамках курса повышения квалификации вы научитесь: 
-                                    <ul>
-                                        <li>Писать на языке Python</li>
-                                        <li>Формировать базы данных и работать в SQL</li>
-                                        <li>Обрабатывать данные</li>
-                                        <li>Строить модели машинного обучения</li>
-                                        <li>Визуализировать данные</li>
-                                        <li>Решать задачи с помощью нейронных сетей</li>
-                                    </ul> 
-                                    <br><br>
-                                    Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
-                                    </ul>
-                                    <br><br>
-                                    В качестве основного программного обеспечения будет использоваться PyCharm (Edu). 
-                                </h4>
+                                <h4>Программа будет наиболее полезна проектировщикам зданий и сооружений нового строительства и иным сотрудникам строительной отрасли, работающим или планирующим работать с использованием технологий информационного моделирования.</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -150,7 +137,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Очная, очно-заочная с применением электронного обучения, дистанционных образовательных технологий</h4>
+                                <h4>Очная, заочная, очно-заочная с применением электронного обучения и дистанционных образовательных технологий.</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -163,7 +150,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс разработан для тех кто планирует  развиваться в сфере работы с данными и создания искусственных нейронных сетей</h4>
+                                <h4>К освоению дополнительной профессиональной программы допускаются лица, имеющие высшее образование или среднее профессиональное образование и прошедшие обучение в учебных заведениях, имеющих государственную аккредитацию.</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -176,13 +163,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Получите представление о разновидностях алгоритмов обучения, и работе в наиболее популярных программах для реализации ИНС, таких как:
-                                    <ul>
-                                        <li>Google Colab</li>
-                                        <li>PyCharm (Edu)</li>
-                                        <li>Anaconda</li>
-                                    </ul>
-                                </h4>
+                                <h4>Программа будет наиболее полезна проектировщикам зданий и сооружений нового строительства и иным сотрудникам строительной отрасли, работающим или планирующим работать с использованием технологий информационного моделирования.</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
@@ -195,7 +176,11 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4></h4>
+                                <h4>
+                                    Хворенков Д.А., к.т.н., доцент, Кафедра «Теплоэнергетика» 
+                                    <br>
+                                    Фахразиев И.И., заведующий учебной лабораторией кафедры "Теплоэнергетика"
+                                </h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
