--- a/it_web.html
+++ b/it_web.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Разработка Web-приложений</h1>
+                                    <div class="spacer-single"></div>
                                     <h3>(количество часов 576)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
