--- a/smart_asutp.html
+++ b/smart_asutp.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Автоматизированные системы управления технологическими процессами в теплоэнергетике</h1>
+                                    <div class="spacer-single"></div>
                                     <h3>(количество часов 306)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
