--- a/smart_tgv.html
+++ b/smart_tgv.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Теплогазоснабжение и вентиляция</h1>
+                                    <div class="spacer-single"></div>
                                     <h3>(количество часов 270)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
