--- a/soft_pedobr.html
+++ b/soft_pedobr.html
@@ -83,6 +83,7 @@
                                     <div class="spacer-double sm-hide"></div>
 									<div class="spacer-half sm-hide"></div>
                                     <h1 class="big">Педагогическое образование: учитель информатики, технологии, робототехники</h1>
+                                    <div class="spacer-single"></div>
                                     <h3>(количество часов 300)</h3>
                                     <div class="spacer-single"></div>
                                     <div class="spacer-double sm-hide"></div>
