--- a/smart_bim.html
+++ b/smart_bim.html
@@ -177,9 +177,9 @@
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
                                 <h4>
-                                    Хворенков Д.А., к.т.н., доцент, Кафедра «Теплоэнергетика» 
+                                    Дрогомирецкий Алексей Владимирович 
                                     <br>
-                                    Фахразиев И.И., заведующий учебной лабораторией кафедры "Теплоэнергетика"
+                                    Кобелева Анастасия Алексеевна
                                 </h4>
                             </p>
                             <div class="spacer-single"></div>
