--- a/index.html
+++ b/index.html
@@ -194,6 +194,13 @@
                                                             <div class="clearfix"></div>                                               
                                                          </div> 
                                                          <div class="schedule-item">
+                                                            <div class="sc-pic"><img src="images/team/ivanov.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-info">
+                                                            <h4><span>Иванов Алексей Александрович</span><br>директор по региональному развитию, Группа компаний "Иннотех"</h4>
+                                                            </div>        
+                                                            <div class="clearfix"></div>                                               
+                                                         </div>
+                                                         <div class="schedule-item">
                                                             <div class="sc-pic"><img src="images/team/repin.jpg" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
                                                             <h4><span>Репин Александр Анатольевич</span><br>директор ООО «Технология»</h4>
