--- a/index.html
+++ b/index.html
@@ -944,9 +944,9 @@
 
                                                     <div class="panel schedule-listing"> 
                                                          <div class="schedule-item">
-                                                            <div class="sc-pic"><img src="images/team/ryabchikov.jpg" class="img-circle" alt=""></div>
+                                                            <div class="sc-pic"><img src="images/team/" class="img-circle" alt=""></div>
                                                             <div class="sc-info">
-                                                            <h4><span>Рябчиков Алексей Вячеславович</span><br>к.т.н., доцент, директор Института международных образовательных программ</h4>
+                                                            <h4><span>Зубкова Юлия Валерьевна</span><br>к.т.н., доцент, кафедра «Мехатронные системы»</h4>
                                                             </div>                                                               
                                                             <div class="sc-time">
                                                             <h4>Руководитель станции</h4>
