--- a/index.html
+++ b/index.html
@@ -787,6 +787,13 @@
                                                         <div class="schedule-item">
                                                             <div class="sc-info"><h3>Программа станции</h3></div>
                                                         </div>
+
+                                                        <div class="schedule-item">
+                                                            <div class="sc-info">
+                                                            <h3>Коммуникативная игра "Дебаты"</h3>
+                                                            </div>       
+                                                            <div class="clearfix"></div>                                               
+                                                         </div>
                                                         
                                                      </div>
 
