--- a/soft_orator.html
+++ b/soft_orator.html
@@ -106,7 +106,7 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                         	<p class="lead wow fadeInUp">
-                                <h4>Сформировать навыки, необходимые для проведения публичных выступлений и развить умения ориентироваться в речевой ситуации и решать поставленную коммуникативную задачу</h4>
+                                <h4>Сформировать навыки, необходимые для проведения публичных выступлений, и развить умение ориентироваться в речевой ситуации и решать поставленную коммуникативную задачу</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div>
@@ -121,7 +121,7 @@
                             <p class="lead wow fadeInUp">
                                 <h4>За время прохождения программы вы: 
                                     <ul>
-                                        <li>Проработаете страх публичных выступлений</li>
+                                        <li>Проработаете способы борьбы со страхом</li>
                                         <li>Разберете фазы ведения переговоров и научитесь ими управлять</li>
                                         <li>Сформируете гибкость в общении с разными людьми, в разных ситуациях, в разных позициях на переговорах</li>
                                         <li>Научитесь эффективно использовать различные переговорные стратегии</li>
@@ -129,9 +129,9 @@
                                         <li>Разовьете навыки, необходимые на этапе противостояния манипуляциям</li>
                                     </ul> 
                                     <br><br>
-                                    Программа направлена на развитие коммуникативных компетенций таких как:
+                                    Программа направлена на развитие коммуникативных компетенций, таких как:
                                     <ul>
-                                        <li>умение чётко и ясно выражать свою мысль</li>
+                                        <li>умение четко и ясно выражать свою мысль</li>
                                         <li>конструктивность речи</li>
                                         <li>динамичность речи</li>
                                         <li>презентация речи</li>
@@ -162,20 +162,20 @@
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Учебный курс «Ораторское искусство и умение вести переговоры» разработан для тех кто планирует  развиваться в сфере управления и работы с людьми</h4>
+                                <h4>Учебный курс «Ораторское искусство и умение вести переговоры» разработан для тех, кто планирует  развиваться в сфере управления и работы с людьми</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
                      </div>
                      <div class="row">  
                         <div class="col-md-12 text-center">
-                            <h2 class="wow fadeInUp">Чем полезно участие в программе/ обучение на курсе</h2>
+                            <h2 class="wow fadeInUp">Чем полезно участие в программе / обучение на курсе</h2>
                             <div class="small-border wow fadeInUp" data-wow-delay=".2s"></div>
                         </div>
 
                         <div class="col-md-12 text-center wow fadeInDown">
                             <p class="lead wow fadeInUp">
-                                <h4>Поставленная речь, дикция, убедительность слога создадут человеку имидж уверенной в себе личности, эксперта в любом вопросе и отличного собеседника. Умение вести переговоры и договариваться с самыми разными людьми позволяет быть успешным в самых разных областях жизни, начиная с личной жизни и заканчивая быстрым продвижением по карьерной лестнице</h4>
+                                <h4>Поставленная речь, дикция, убедительность слога создадут человеку имидж уверенной в себе личности, эксперта в любом вопросе и отличного собеседника. Умение вести переговоры и договариваться с разными людьми позволяет быть успешным в разнообразных областях жизни, начиная с личной жизни и заканчивая быстрым продвижением по карьерной лестнице</h4>
                             </p>
                             <div class="spacer-single"></div>
                         </div> 
